# c-_cmake_prj

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  hi.cpp  hi.hpp
tools/: CMakeLists.txt  prog1.cpp
